--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     <h1 class="title">Hello World</h1>
    
     <p id="item"> ipsum dolor sit amet consectetur, adipisicing elit. Maxime, sunt sapiente! Vero earum totam, nam libero ea officiis voluptate cumque rem adipisci doloremque odio soluta explicabo dolores. Harum, quia labore? </p>
-   <img  alt="">
-   <ul>
-    <li></li>
-    <li> </li>
-    <li> </li>
-   </ul>
+   <img alt="">
+
+   <ul id="items"></ul>
+
 <table>
     <tr>
 <th></th>
